@@ -89,6 +89,8 @@ var ReplSet = exports.ReplSet = function(servers, options) {
   this._numberOfServersLeftToInitialize = 0;
   // Do we record server stats or not
   this.recordQueryStats = false;
+  // Update health try server
+  this.updateHealthServerTry = 0;
 
   // Get the readPreference
   var readPreference = this.options['readPreference'];
@@ -253,23 +255,6 @@ ReplSet.prototype.isReadPrimary = ReplSet.prototype.isPrimary;
 
 /**
  * @ignore
- **/
-ReplSet.prototype._checkReplicaSet = function() {
-  if(!this.haEnabled) return false;
-  var currentTime = new Date().getTime();
-
-  if (this.__isDoingReplSetHealth) return false;
-
-  if((currentTime - this.lastReplicaSetTime) >= this.replicasetStatusCheckInterval) {
-    this.lastReplicaSetTime = currentTime;
-    return true;
-  } else {
-    return false;
-  }
-}
-
-/**
- * @ignore
  */
 ReplSet.prototype.allServerInstances = function() {
   var self = this;
@@ -304,31 +289,62 @@ ReplSet.prototype.allServerInstances = function() {
 }
 
 /**
- * Refresh the health status / configuration of this replicaset.
- * Detect failover, addition of new nodes, etc.
+ * Enables high availability pings.
  *
- * @param {Db} db
+ * @ignore
  */
-ReplSet.prototype.updateHealth = function(db, callback) {
-  if(!this._checkReplicaSet()) {
-    return callback(null, null);
+ReplSet.prototype._enableHA = function () {
+  var self = this;
+  return check();
+
+  function ping () {
+    if("disconnected" == self._serverState) return;
+
+    if(Object.keys(self._state.addresses).length == 0) return;
+    var selectedServer = self._state.addresses[Object.keys(self._state.addresses)[self.updateHealthServerTry++]];
+    if(self.updateHealthServerTry >= Object.keys(self._state.addresses).length) self.updateHealthServerTry = 0;
+    if(selectedServer == null) return check();
+
+    // If we have an active db instance
+    if(self.dbInstances.length > 0) {
+      var db = self.dbInstances[0];
+
+      // Create a new master connection
+      var _server = new Server(selectedServer.host, selectedServer.port, {
+        auto_reconnect: false,
+        returnIsMasterResults: true,
+        slaveOk: true,
+        socketOptions: { connectTimeoutMS: 1000}
+      });
+
+      // Connect using the new _server connection to not impact the driver
+      // behavior on any errors we could possibly run into
+      _server.connect(db, function(err, result, _server) {
+        if(err) {
+          if(_server.close) _server.close();
+          return check();
+        }
+
+        // Create is master command
+        var cmd = DbCommand.createIsMasterCommand(db);
+        // Execute is master command
+        db._executeQueryCommand(cmd, {failFast:true, connection: _server.checkoutReader()}, function(err, res) {
+          // Close the connection used
+          _server.close();
+          // If error let's set perform another check
+          if(err) return check();
+          // Validate the replicaset
+          self._validateReplicaset(res, db.auths, function() {
+            check();
+          });
+        });
+      });
+    }
   }
 
-  var self = this;
-  self.__isDoingReplSetHealth = true;
-
-  var cmd = DbCommand.createIsMasterCommand(db);
-  db._executeQueryCommand(cmd, {failFast:true}, function(err, res) {
-    if(err) {
-      self.__isDoingReplSetHealth = false;
-      return callback(err, null);
-    }
-
-    self._validateReplicaset(res, db.auths, function() {
-      self.__isDoingReplSetHealth = false;
-      callback(null, null);
-    });
-  })
+  function check () {
+    self._haTimer = setTimeout(ping, self.replicasetStatusCheckInterval);
+  }
 }
 
 /**
@@ -336,11 +352,10 @@ ReplSet.prototype.updateHealth = function(db, callback) {
  */
 ReplSet.prototype._validateReplicaset = function(result, auths, cb) {
   var self = this;
-
   var res = result.documents[0];
 
   // manage master node changes
-  if (res.primary && self._state.master.name != res.primary) {
+  if(res.primary && self._state.master && self._state.master.name != res.primary) {
     // Delete master record so we can rediscover it
     delete self._state.addresses[self._state.master.name];
 
@@ -799,34 +814,6 @@ ReplSet.prototype._handleOnFullSetup = function (parent) {
 
   if(!this.haEnabled) return;
   this._enableHA();
-}
-
-/**
- * Enables high availability pings.
- *
- * @ignore
- */
-ReplSet.prototype._enableHA = function () {
-  var self = this;
-  return check();
-
-  function check () {
-    self._haTimer = setTimeout(ping, self.replicasetStatusCheckInterval);
-  }
-
-  function ping () {
-    // TODO do we ever become reconnected?
-    // if so need to solve restarting ping
-    if("disconnected" == self._serverState) return;
-
-    // If we are connected let's perform a healthcheck
-    if("connected" == self._serverState
-       && Array.isArray(self.dbInstances) && self.dbInstances.length > 0) {
-      self.updateHealth(self.dbInstances[0], check);
-    } else {
-      check();
-    }
-  }
 }
 
 /**
