@@ -2038,7 +2038,6 @@ var _finishConnecting = function(serverConfig, object, options, callback) {
   // Safe settings
   var safe = {};
   // Build the safe paramter if needed
-  // console.dir(object)
   if(object.db_options.journal) safe.j = object.db_options.journal;
   if(object.db_options.w) safe.w = object.db_options.w;
   if(object.db_options.fsync) safe.fsync = object.db_options.fsync;
