@@ -440,19 +440,19 @@ var writeBuffer = function(self, buffer, close, callback) {
  * @api private
  */
 var buildMongoObject = function(self, callback) {
-  // Keeps the final chunk number
-  var chunkNumber = 0;
-  var previousChunkSize = 0;
-  // Get the correct chunk Number, if we have an empty chunk return the previous chunk number
-  if(null != self.currentChunk && self.currentChunk.chunkNumber > 0 && self.currentChunk.position == 0) {
-    chunkNumber = self.currentChunk.chunkNumber - 1;
-  } else {
-    chunkNumber = self.currentChunk.chunkNumber;
-    previousChunkSize = self.currentChunk.position;
-  }
+  // // Keeps the final chunk number
+  // var chunkNumber = 0;
+  // var previousChunkSize = 0;
+  // // Get the correct chunk Number, if we have an empty chunk return the previous chunk number
+  // if(null != self.currentChunk && self.currentChunk.chunkNumber > 0 && self.currentChunk.position == 0) {
+  //   chunkNumber = self.currentChunk.chunkNumber - 1;
+  // } else {
+  //   chunkNumber = self.currentChunk.chunkNumber;
+  //   previousChunkSize = self.currentChunk.position;
+  // }
 
-  // Calcuate the length
-  var length = self.currentChunk != null ? (chunkNumber * self.chunkSize + previousChunkSize) : 0;
+  // // Calcuate the length
+  // var length = self.currentChunk != null ? (chunkNumber * self.chunkSize + previousChunkSize) : 0;
   var mongoObject = {
     '_id': self.fileId,
     'filename': self.filename,
